@@ -3,13 +3,16 @@ package com.java.bms.Service;
 import com.java.bms.Enums.SeatCategory;
 import com.java.bms.Model.*;
 import com.java.bms.Repository.BookingRepository;
+import com.java.bms.Repository.SeatRepository;
 import com.java.bms.Repository.ShowRepository;
 import com.java.bms.Repository.UserRepository;
 import com.java.bms.dto.BookingRequest;
 import com.java.bms.dto.BookingResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -25,6 +28,9 @@ public class BookingService {
     @Autowired
     private UserRepository userRepository;
 
+    @Autowired
+    private SeatRepository seatRepository;
+
     public BookingResponse getBookingDetails(Long bookingId) {
         Booking booking = bookingRepository.findById(bookingId)
                 .orElseThrow(() -> new RuntimeException("Booking not found"));
@@ -37,22 +43,23 @@ public class BookingService {
                 show.getMovie().getMovieName(),
                 show.getScreen().getScreenId(),
                 show.getScreen().getSeats().get(0).getSeatCategory().name(),
-                booking.getBookedSeats().stream().map(Seat::getSeatId).toList(),
+                booking.getBookedSeats().stream().map(Seat::getId).toList(),
                 user.getMobile(),
                 booking.getStatus(),
                 String.valueOf(show.getShowStartTime()),
                 show.getMovie().getMovieDurationInMinutes()
         );
     }
-    public Booking createBooking(BookingRequest bookingRequest) {
+    @Transactional
+    public Booking createBooking(BookingRequest bookingRequest) throws InterruptedException {
         // Fetch the Show
         Show show = showRepository.findById(bookingRequest.getShowId())
                 .orElseThrow(() -> new RuntimeException("Show not found"));
 
         List<Seat> allSeats = show.getScreen().getSeats();
         List<Integer> availableSeatIds = allSeats.stream()
-                .map(Seat::getSeatId)
-                .collect(Collectors.toList());
+                .map(Seat::getId)
+                .toList();
 
         // Validate Requested Seat IDs
         List<Integer> requestedSeats = bookingRequest.getSeatIds();
@@ -62,32 +69,34 @@ public class BookingService {
             }
         }
 
-        // Check if any seat is already booked
-        List<Integer> bookedSeats = show.getBookedSeatIds();
-        List<Integer> alreadyBookedSeats = requestedSeats.stream()
-                .filter(bookedSeats::contains)
-                .collect(Collectors.toList());
-
-        if (!alreadyBookedSeats.isEmpty()) {
-            throw new RuntimeException("Seats already booked: " + alreadyBookedSeats);
+        // Lock and Validate Seats
+        List<Seat> lockedSeats = new ArrayList<>();
+        for (Integer seatId : requestedSeats) {
+            Seat seat = seatRepository.lockSeatById(seatId);
+            if (seat.isBooked()) {
+                throw new RuntimeException("Seat " + seatId + " is already booked.");
+            }
+            lockedSeats.add(seat);
         }
 
         // Calculate Payment Amount
-        double totalAmount = allSeats.stream()
-                .filter(seat -> requestedSeats.contains(seat.getSeatId()))
+        double totalAmount = lockedSeats.stream()
                 .mapToDouble(seat -> getSeatPrice(seat.getSeatCategory()))
                 .sum();
 
         // **Integrate Payment Gateway** (Placeholder for Razorpay)
-        /*Payment payment = initiatePayment(totalAmount, bookingRequest);
+    /*Payment payment = initiatePayment(totalAmount, bookingRequest);
 
-        if (!payment.isPaymentSuccessful()) {
-            throw new RuntimeException("Payment failed. Please try again.");
-        }*/
-
+    if (!payment.isPaymentSuccessful()) {
+        throw new RuntimeException("Payment failed. Please try again.");
+    }*/
+        Thread.sleep(60000);
         // Mark seats as booked after successful payment
-        bookedSeats.addAll(requestedSeats);
-        show.setBookedSeatIds(bookedSeats);
+        for (Seat seat : lockedSeats) {
+            seat.setBooked(true);
+            seatRepository.save(seat);
+        }
+        show.getBookedSeatIds().addAll(requestedSeats);
         showRepository.save(show);
 
         // Fetch the User
@@ -98,14 +107,13 @@ public class BookingService {
         Booking booking = new Booking();
         booking.setShow(show);
         booking.setUser(user);
-        booking.setBookedSeats(allSeats.stream()
-                .filter(seat -> requestedSeats.contains(seat.getSeatId()))
-                .collect(Collectors.toList()));
+        booking.setBookedSeats(lockedSeats);
         booking.setStatus("SUCCESS");
         //booking.setPayment(payment);
 
         return bookingRepository.save(booking);
     }
+
     public List<BookingResponse> getAllBookingDetails() {
         List<Booking> bookingList = bookingRepository.findAll();
 
@@ -133,7 +141,7 @@ public class BookingService {
                 show.getMovie().getMovieName(),
                 show.getScreen().getScreenId(),
                 show.getScreen().getSeats().get(0).getSeatCategory().name(),
-                booking.getBookedSeats().stream().map(Seat::getSeatId).collect(Collectors.toList()),
+                booking.getBookedSeats().stream().map(Seat::getId).collect(Collectors.toList()),
                 user.getMobile(),
                 booking.getStatus(),
                 String.valueOf(show.getShowStartTime()),
